PP-3426 - Added new content and fixed layout bugs

--- a/app/assets/sass/modules/_create-payment-link.scss
+++ b/app/assets/sass/modules/_create-payment-link.scss
@@ -52,3 +52,17 @@
     }
   }
 }
+
+.create-payment-link {
+  &-details {
+    margin-top: $gutter;
+
+    p {
+      margin-bottom: $gutter / 2!important;
+    }
+  }
+
+  &-link-replay {
+    margin-top: $gutter / 2;
+  }
+}
